style.css
.char {
  position: fixed;
  text-align: center;
  cursor: url('https://res.cloudinary.com/miko2/raw/upload/v1657492283/aero_arrow_nurzij.cur'), grab;

  height: 11rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;

  user-select: none;
  touch-action: none;
}

.move-cursor {
  cursor: url('https://res.cloudinary.com/miko2/raw/upload/v1657492328/aero_move_kusjof.cur'), grabbing;
}

.sprite {
  transform-origin: bottom;
  transform: scale(2);
}

.name-tag {
  text-align: center;
  position: relative;
  background-color: rgba(0, 0, 0, 0.65);
  color: white;
  margin: 5px 0 0;
  padding: 5px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12pt;
}

.right-sprite {
  transform: scale(2) scaleX(-1);
}

.damage {
  animation: damage 1s;
}

@keyframes damage {
  0% {filter: brightness(1)}
  12.5% {filter: brightness(0.75)}
  25% {filter: brightness(1)}
  37.5% {filter: brightness(0.75)}
  50% {filter: brightness(1)}
  62.5% {filter: brightness(0.75)}
  75% {filter: brightness(1)}
  87.5%{filter: brightness(0.75)}
  100% {filter: brightness(1)}
}

.transform-origin-center {
  position: relative;
  top: -25pt;
  transform-origin: center;
}

